# pkgctx

./: Cargo.toml  README.md  flake.nix  implementation.md
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: q1b2x2lzj121lvimnymmxp1kc6861857-source
.github/workflows/: ci.yml
man/: pkgctx.1
src/: compact.rs  extractor.rs  fetch.rs  hoist.rs  main.rs  python_extractor.rs  python_source_extractor.rs  r_extractor.rs  r_source_extractor.rs  schema.rs
