[package]
name = "pkgctx"
version = "0.1.0"
edition = "2021"
authors = ["Bruno Rodrigues <bruno@brodrigues.co>"]
description = "Compile software packages into LLM-ready context"
license = "GPL-3.0-or-later"
repository = "https://github.com/b-rodrigues/pkgctx"
keywords = ["llm", "documentation", "r", "python", "api"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "1"

# Process spawning for R/Python
which = "6"

[profile.release]
lto = true
strip = true
